--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h6{
   background-color: white;
   border: 2px solid black;
   padding-left: 15px;
+
  
 }
 .footer {
@@ -28,7 +29,8 @@ h6{
   width: 800px
 }
 .title {
-  background-color: white; 
+  background-color: white;
+  width: 800px
 }
 .column1 {
   float: left;
@@ -162,19 +164,6 @@ h6{
   height: 50px; 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.page_att{
+  width: 840px
+}
